# CDC_from_SQL_and_NoSQL_to_Data_Warehouse

./: README.md  app.py  cdk.json  requirements.txt
cdc_from_sql_and_no_sql_to_data_warehouse/: cdc_from_sql_and_no_sql_to_data_warehouse_stack.py
cdk_infrastructure/: __init__.py
source/load_data_to_dynamodb_lambda/: handler.py
source/load_data_to_rds_lambda/: handler.py
source/load_s3_files_from_dynamodb_stream_to_redshift_lambda/: handler.py  pyproject.toml
source/process_dynamodb_stream_lambda/: handler.py  pyproject.toml
source/start_dms_replication_task_lambda/: handler.py  pyproject.toml
source/write_dynamodb_stream_to_s3_lambda/: handler.py
